--- a/MCO2_Webapp/UpdatePage.html
+++ b/MCO2_Webapp/UpdatePage.html
@@ -3,7 +3,7 @@
 <head>
     <title> Update</title>
 </head>
-<link rel="stylesheet" type="text/css" href="Homepage.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 <body>
     <h1>Update Movies</h1>
     <button onclick="window.location.href='ViewMovies.html'">Back to View Movies</button><br><br><br>
