--- a/MCO2_Webapp/SearchMovies.html
+++ b/MCO2_Webapp/SearchMovies.html
@@ -3,12 +3,12 @@
 <head>
     <title>Search Page </title>
 </head>
-<link rel="stylesheet" type="text/css" href="Homepage.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 <body>
     <h1> Search IMDB Movies </h1>
     <button onclick="window.location.href='ViewMovies.html'">View Movies</button>
     <button onclick="window.location.href='ViewReports.html'">View Reports</button>
-    <button onclick="window.location.href='HomePage.html'">Back to Home</button> <br><br>
+    <button onclick="window.location.href='index.html'">Back to Home</button> <br><br>
     <form>
         <input type="text" placeholder="Search a Movie">
         <button type="submit">Search</button>
