--- a/MCO2_Webapp/ViewMovies.html
+++ b/MCO2_Webapp/ViewMovies.html
@@ -3,12 +3,12 @@
 <head>
     <title>Home Page</title>
 </head>
-<link rel="stylesheet" type="text/css" href="Homepage.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 <body>
 <h1> View IMDB Movies </h1>
 <button onclick="window.location.href='SearchMovies.html'">Search Movies</button>
 <button onclick="window.location.href='ViewReports.html'">View Reports</button>
-<button onclick="window.location.href='HomePage.html'">Back to Home</button>
+<button onclick="window.location.href='index.html'">Back to Home</button>
 
 <h2> Movie List </h2>
 <table>
