--- a/MCO2_Webapp/Frontend/index.html
+++ b/MCO2_Webapp/Frontend/index.html
@@ -35,20 +35,20 @@
 
 <hr>
 
-<h3>🔵 CASE 1 — Concurrent Reads (Node0 + Node1 + Node2)</h3>
+<h3>CASE 1 — Concurrent Reads (Node0 + Node1 + Node2)</h3>
 <input id="readTconst" placeholder="Enter tconst (example: tt0000001)">
 <button onclick="handleConcurrentRead()">Test Case 1</button>
 
 <hr>
 
-<h3>🟡 CASE 2 — One Writer + Readers</h3>
+<h3>CASE 2 — One Writer + Readers</h3>
 <input id="case2_tconst" placeholder="tconst">
 <input id="case2_title" placeholder="New Title">
 <button onclick="handleWriteRead()">Test Case 2</button>
 
 <hr>
 
-<h3>🔴 CASE 3 — Write/Write Conflict</h3>
+<h3>CASE 3 — Write/Write Conflict</h3>
 <input id="case3_tconst" placeholder="tconst">
 <input id="case3_title1" placeholder="Node0 new title">
 <input id="case3_title2" placeholder="Node1 new title">
