--- a/MCO2_Webapp/Frontend/index.html
+++ b/MCO2_Webapp/Frontend/index.html
@@ -56,18 +56,18 @@
 
 <hr>
 
-<h3>⚠ FAILURE SIMULATION</h3>
+<h3>FAILURE SIMULATION</h3>
 <button onclick="simulateCentralFailure()">Simulate Central Failure</button>
 <button onclick="simulateNode1Failure()">Simulate Node1 Failure</button>
 
 <hr>
 
-<h3>🔄 RECOVERY</h3>
+<h3>RECOVERY</h3>
 <button onclick="recover()">Replay Missed Writes</button>
 
 <hr>
 
-<h3>📜 System Log</h3>
+<h3>System Log</h3>
 <div id="logBox"></div>
 
 <script>
