updated front and back end

--- a/MCO2_Webapp/Frontend/ViewMovies.html
+++ b/MCO2_Webapp/Frontend/ViewMovies.html
@@ -13,26 +13,18 @@
 <h2> Movie List </h2>
 <table>
     <tr>
-        <th>Number </th>
+        <th>Number</th>
         <th>Type</th>
         <th>Title</th>
         <th>Year</th>
         <th>Director</th>
-        <th>For Adults</th>
+        <th>Adult?</th>
         <th>Genre</th>
+        <th>Update</th>
+        <th>Delete</th>
     </tr>
-    <tr>
-        <td>1</td>
-        <td>Movie</td>
-        <td>Inception</td>
-        <td>2010</td>
-        <td>Christopher Nolan</td>
-        <td>No</td>
-        <td>Sci-Fi</td>
-        <td><button onclick="window.location.href='UpdatePage.html'"> Update </button></td>
-        <td><button> Delete</button> </td>
-    </tr>
-
+    <tbody id="movieTableBody"></tbody>
+</table>
 </body> 
 
 </html>
