--- a/MCO2_Webapp/Frontend/ViewMovies.html
+++ b/MCO2_Webapp/Frontend/ViewMovies.html
@@ -25,6 +25,11 @@
     </tr>
     <tbody id="movieTableBody"></tbody>
 </table>
+<script src="script.js"></script>
+<script>
+loadMovies();
+</script>
+
 </body> 
 
 </html>
