--- a/MCO2_Webapp/Frontend/ViewReports.html
+++ b/MCO2_Webapp/Frontend/ViewReports.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home Page</title>
+    <title>Reports</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
-<link rel="stylesheet" type="text/css" href="index.css">
 <body>
-<h1> View Text Based reports </h1> <br>
-<button onclick="window.location.href='ViewMovies.html'">View Movies</button>
-<button onclick="window.location.href='SearchMovies.html'">Search Movies</button>
-<button onclick="window.location.href='index.html'">Back to Home</button>
-<h2> Top 5 Genre </h2> <br>
-<h2> Year with the Most Titles </h2> <br>
-<h2> Number of Adults and Non-adults</h2>
+    <h1> View Text-Based Reports </h1>
+    <button onclick="window.location.href='ViewMovies.html'">View Movies</button>
+    <button onclick="window.location.href='SearchMovies.html'">Search Movies</button>
+    <button onclick="window.location.href='index.html'">Back to Home</button>
+
+    <hr>
+
+    <h2>Top 5 Genres</h2>
+    <ul id="topGenres"></ul>
+
+    <h2>Year with the Most Titles</h2>
+    <p id="mostTitlesYear">Loading...</p>
+
+    <h2>Number of Adults and Non-Adults</h2>
+    <p id="adultCount">Loading...</p>
+
+    <script src="script.js"></script>
+    <script>
+    loadTopGenres();
+    loadMostTitlesYear();
+    loadAdultStats();
+    </script>
+
 </body>
 </html>
