--- a/MCO2_Webapp/UpdatePage.html
+++ b/MCO2_Webapp/UpdatePage.html
@@ -22,10 +22,10 @@
         
         <label for="dire">For Adults</label>
         <label> 
-            <input type = "radio" name = "UpdateisAdult" value="yes"> Yes 
+            <input type = "radio" name = "UpdateisAdult" value="1"> Yes 
         </label>
         <label>
-            <input type = "radio" name = "UpdateisAdult" value="no"> No
+            <input type = "radio" name = "UpdateisAdult" value="0"> No
         </label><br><br>
 
         <label for="director">Genre: </label>
