--- a/MCO2_Webapp/UpdatePage.html
+++ b/MCO2_Webapp/UpdatePage.html
@@ -22,11 +22,12 @@
         
         <label for="dire">For Adults</label>
         <label> 
-            <input type = "radio" name = "UpdateisAdult" value="1"> Yes 
+        <input type="radio" name="UpdateisAdult" value="yes"> Yes 
         </label>
         <label>
-            <input type = "radio" name = "UpdateisAdult" value="0"> No
-        </label><br><br>
+        <input type="radio" name="UpdateisAdult" value="no"> No
+        </label>
+        <br><br>
 
         <label for="director">Genre: </label>
         <input type="text" id="Genre" name="genre" required><br><br>
